# TEMPLATE

./: .env  .gitignore  .gitlab-ci.yml  Makefile  README.md  bitbucket-pipelines.yml  entrypoint.sh  openapi3.yaml  pyproject.toml  requirements.txt  set_version.py
.github/workflows/: build_dockerhub.yaml  debug.yaml
docs/: CONTRIBUTING.md  SECURITY.md
iac/docker/: alpine.dockerfile.txt  dockerfile.alpine  dockerfile.ubuntu  readme.txt
iac/nomad/: mypkg.nomad.hcl
iac/pulumi/: __main__.py
iac/terraform/: backends.tf  main.tf  outputs.tf  providers.tf  variables.tf
resources/: database_ddl.sql  insomnia_project.json  openapi.yaml  sqitch.conf.template
src/mypkg/: .env  __init__.py  app.py  config.py
src/mypkg/api/: security.py  templates.py
src/mypkg/database/: connections.py  models.py  pg_conn_pool.py  pg_models.py  pg_pool.py  redis_conn_pool.py  redis_models.py  redis_pool.py  schemas.py
src/mypkg/integrations/: integration1.py
src/mypkg/util/: apikeys.py  decorators.py  errors.py  logger.py  prometheus.py  ratelimiter.py
src/mypkg/utils/: helpers.py  logger.py  prometheus.py  rate_limiter.py  telemetry.py  trace.py
tests/: test_app.py
